--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
+    "description": "Web tool to split GPX tracks into segments with visual map and elevation chart interface",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/calvinc0630/gpx-splitter.git"
+    },
+    "bugs": {
+        "url": "https://github.com/calvinc0630/gpx-splitter/issues"
+    },
+    "homepage": "https://gpx-splitter.pages.dev",
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
@@ -33,7 +43,6 @@
         "@tailwindcss/vite": "^4.1.13",
         "@types/file-saver": "^2.0.7",
         "@types/leaflet": "^1.9.20",
-        "@types/xml2js": "^0.4.14",
         "es-toolkit": "^1.39.10",
         "file-saver": "^2.0.5",
         "leaflet": "^1.9.4",
@@ -41,8 +50,7 @@
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-leaflet": "^5.0.0",
-        "recharts": "^3.2.0",
-        "xml2js": "^0.6.2"
+        "recharts": "^3.2.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.33.0",
